# Project-Mercury-Data-Science-Analytics

./: .gitignore  README.md  STATS.md
programs/task-2-ml-optimization/: README.md  cli.py  optimizer.py  requirements.txt
programs/task-3-time-series-forecasting/: README.md  pyproject.toml  requirements.txt
programs/task-3-time-series-forecasting/forecast/: __init__.py  cli.py
programs/task-3-time-series-forecasting/forecast/cli_commands/: compare_cmd.py  evaluate_cmd.py  optimize_cmd.py  predict_cmd.py  train_cmd.py
programs/task-3-time-series-forecasting/forecast/utils/: generate_data.py
