[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "forecast-cli"
version = "1.0.0"
description = "Production-grade time series forecasting CLI with Prophet, ARIMA, LSTM, and ensemble methods"
authors = [{name = "Christopher Torres", email = "contact@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
forecast = "forecast.cli:app"

[project.urls]
Homepage = "https://github.com/torresjchristopher/Project-Mercury-Data-Science-Analytics"
Repository = "https://github.com/torresjchristopher/Project-Mercury-Data-Science-Analytics"

[tool.poetry]
name = "forecast-cli"
version = "1.0.0"
description = "Advanced time series forecasting with multiple algorithms"
authors = ["Christopher Torres <contact@example.com>"]
readme = "README.md"
packages = [{include = "forecast"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9"}
pandas = "^2.0"
numpy = "^1.24"
prophet = "^1.1"
statsmodels = "^0.14"
scikit-learn = "^1.3"
torch = "^2.0"
pytorch-lightning = "^2.0"
plotly = "^5.18"
tqdm = "^4.66"
pydantic = "^2.0"
rich = "^13.7"
joblib = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.12"
ruff = "^0.1"
mypy = "^1.7"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
